# Sim6502

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTORS.md  README.md
.github/: copilot-instructions.md
.github/workflows/: cmake-ubuntu.yml
cmake/: UpdateSubmodules.cmake  cpu6502Config.cmake.in
cpu6502/: CMakeLists.txt  config.h.in
cpu6502/cpu6502/: main.cpp
docs/: cpu-instructions.md  todo.md
examples/: CMakeLists.txt  main.cpp
include/cpu6502/: cpu.hpp  mem.hpp
libcpu6502/: CMakeLists.txt
libcpu6502/libcpu6502/: cpu.cpp  cpu.hpp  cpu_test.cpp  mem.hpp
src/: CMakeLists.txt  config.hpp.in  cpu.cpp  mem.cpp
tests/: CMakeLists.txt  cpu_test.cpp  mem_test.cpp
